# protocan

./: .gitignore  AGENTS.md  CMakeLists.txt  codegen_spec.md  descriptor_spec.md  dynamic_ros_interface.cpp  packages.md  spec-v1.md  spec-v2.md  spec-v3.md  spec-v4.md  spec-v5.md  spec-v6.md  spec-v7.md  spec.md
examples/: bldc_motor.proto
protocan/: CMakeLists.txt  package.xml
protocan/cmake/: protocanConfig.cmake.in
protocan/include/protocan/: bulk_transfer.hpp  can_frame.hpp  can_interface.hpp  descriptor_parser.hpp  device_tracker.hpp  master.hpp  packed_binary.hpp  pdo_manager.hpp  schema_hash.hpp  types.hpp
protocan/proto/protocan/: descriptor.proto  options.proto
protocan/src/: bulk_transfer.cpp  can_frame.cpp  descriptor_parser.cpp  device_tracker.cpp  master.cpp  packed_binary.cpp  pdo_manager.cpp  schema_hash.cpp  types.cpp
protocan/tests/: CMakeLists.txt  test_bulk_transfer.cpp  test_can_frame.cpp  test_master.cpp  test_packed_binary.cpp  test_pdo_manager.cpp  test_schema_hash.cpp
protocan_bridge/: CMakeLists.txt  package.xml
protocan_bridge/src/: main.cpp  node_handler.hpp  protocan_bridge_node.cpp  protocan_bridge_node.hpp  socketcan_interface.cpp  socketcan_interface.hpp
protocan_device/: CMakeLists.txt  package.xml
protocan_device/cmake/: protocan_deviceConfig.cmake.in
protocan_device/include/protocan_device/: can_interface.hpp  device.hpp  node_base.hpp
protocan_device/src/: device.cpp  node_base.cpp
protocan_device/tests/: CMakeLists.txt  test_device.cpp  test_node_base.cpp
protocan_examples/: CMakeLists.txt  package.xml
protocan_examples/proto/: bldc_motor.proto
protocan_examples/proto/protocan/: options.proto
protocan_examples/src/: bldc_motor_socketcan_node.cpp  socketcan_device_interface.cpp  socketcan_device_interface.hpp
protocan_gen/: CMakeLists.txt  package.xml
protocan_gen/src/: generator.cpp  generator.hpp  main.cpp  naming.cpp  naming.hpp
tests/: CMakeLists.txt  test_integration.cpp
