<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>protocan_bridge</name>
  <version>0.1.0</version>
  <description>SocketCAN ↔ ROS2 bridge for the ProtoCAN protocol</description>
  <maintainer email="todo@todo.com">TODO</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>ros_babel_fish</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
